fix alignments & spacing issue

--- a/core/static/user/user_edit.scss
+++ b/core/static/user/user_edit.scss
@@ -1,9 +1,17 @@
+
+@media (max-width: 750px) {
+  .title {
+    text-align: center;
+  }
+}
+
 .profile {
   &-visible {
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 5px;
+    padding-top: 10px;
 
     >input[type="checkbox"] {
       cursor: pointer;
@@ -39,6 +47,7 @@
 
     @media (max-width: 750px) {
       max-width: 100%;
+      padding: 10px 10px 0;
     }
 
     &-display {
@@ -86,16 +95,12 @@
   }
 
   &-fields {
-    padding: 20px 0;
+    padding: 10px 10px 0;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     gap: 10px;
     justify-content: center;
-
-    @media (max-width: 750px) {
-      gap: 20px;
-    }
   }
 
   &-field {
